--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.1"
+  "name": "projeto-integrado3.0",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+    "dependencies": {
+      "body-parser": "^1.20.0",
+      "cors": "^2.8.5",
+      "express": "^4.18.1",
+      "netlify-lambda": "^2.0.15",
+      "serverless-http": "^3.0.2"
+    },
+    "scripts": {
+      "start": "./node_modules/.bin/netlify-lambda serve ./src",
+      "build": "./node_modules/.bin/netlify-lambda build ./src"
+    }
   }
-}
